[package]

name = "mousemove"
version = "0.0.2"
authors = ["Alex Chandel <alexchandel@gmail.com>"]
description = "Send a mouse movement or click event to the system."
keywords = ["mouse", "gui", "scripting"]
repository = "https://github.com/alexchandel/mousemove-rs"
readme = "README.md"
license = "Unlicense"

[dependencies]
winapi = "*"
user32-sys = "*"
